k8smanifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-web-app-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: event-web-app
